[package]
name = "int_cmp"
version = "0.1.0"
authors = ["Mikastiv <m.leblanc_3@hotmail.com>"]
edition = "2018"
description = "Small library for comparing unsigned integers with signed integers"
repository = "https://github.com/Mikastiv/int_cmp"
license = "MIT"
readme = "README.md"
keywords = ["compare", "cmp", "int", "integer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
